--- a/src/components/SearchBlock/SearchResultList/SearchResultList.module.css
+++ b/src/components/SearchBlock/SearchResultList/SearchResultList.module.css
@@ -5,15 +5,32 @@ ul {
 }
 
 li {
-    padding: 12px;
+    padding: 32px;
     border-radius: 20px;
     background-color: #fff;
 }
 
-.mealName {}
+.meal {
+    display: flex;
+    gap: 20px;
+}
 
-.mealCountry {}
+.mealImageContainer img {
+    width: 200px;
+    border-radius: 12px;
+}
 
-.mealCategory {}
+.mealContent {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
 
-.mealImage {}
+.mealContent .textLink {
+    margin-top: auto;
+}
+
+.mealName {
+    font-size: 32px;
+    line-height: 40px;
+}
